<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/mascotas"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textAlignment="center"
        android:textSize="35dp"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailSubject"
            android:maxLength="50"

        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:maxLength="8"
        />
        <Button
            android:id="@+id/btn_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_session"
            android:textColor="@color/btn_txtcolor"
            android:background="@color/btn_background"
        />
    </RelativeLayout>

</LinearLayout>